--- a/views/previsao-do-tempo.html
+++ b/views/previsao-do-tempo.html
@@ -1,7 +1,7 @@
 <div class="well" ng-controller="PrevisaoTempoController">
     <h3>Demonstrando o ng-resource</h3>
     <h3>Previsão do Tempo</h3>
-    <h4>São Paulo, Brasil</h4>
+    <h4>Porto Alegre/RS, Brasil</h4>
     <h4>Local: {{tempo.name}}</h4>
     <h4>Temperatura: {{tempo.main.temp}}</h4>
     <h4>Mínima: {{tempo.main.temp_min}} °C</h4>
